<resources>
    <string name="app_name">Smart Charity</string>
    <string name="Success">Success</string>
    <string name="Loading">Loading..</string>
    <string name="checkbox_needy_msg">Are you needy people</string>
    <string name="SDADescription1"><![CDATA[DO NOT DELAY GIVING IN CHARITY]]></string>
    <string name="SDADescription2">  <![CDATA[The Prophet Muhammad (peace be upon him) once had several coins that he asked his wife to distribute in charity. But due to the Prophet illness at the time, she did not have an opportunity to give out the coins. When the Prophet learned of this, he asked for the coins, placed them in his hand, and then said: "What would God Prophet think if he were to meet God, who is Great and Glorious, while (still) possessing these?" - Al-Tirmidhi, Hadith 586]]></string>
    <string name="SDADescription3">  <![CDATA[THE IMPORTANCE OF CHARITY]]></string>
    <string name="SDADescription4">  <![CDATA[The Prophet Muhammad (peace be upon him) said: "The believer's shade on the Day of Resurrection will be his charity." - Al-Tirmidhi, Hadith 604
    The Prophet also said: "Every act of goodness is charity." - Sahih Muslim, Hadith 496]]></string>
    <string name="SDADescription5">  <![CDATA[EVERY MUSLIM MUST GIVE IN CHARITY]]></string>
    <string name="SDADescription6">  <![CDATA[The Prophet Muhammad (peace be upon him) said: "Every Muslim has to give in charity." The people then asked: "(But what) if someone has nothing to give, what should he do?" The Prophet replied: "He should work with his hands and benefit himself and also give in charity (from what he earns)." The people further asked: "If he cannot find even that?" He replied: "He should help the needy who appeal for help." Then the people asked: "If he cannot do (even) that?" The Prophet said finally: "Then he should perform good deeds and keep away from evil deeds, and that will be regarded as charitable deeds." - Sahih Al-Bukhari, Volume 2, Hadith 524 ]]></string>
    <string name="title_activity_map">Map</string>

    <string name="action_settings">Settings</string>
    <string name="datepicker">Choose the Available Date</string>
    <string name="timepicker">Choose the Available Time</string>

</resources>
